--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -4,21 +4,32 @@
 #
 #    pip-compile --output-file tools/requirements.txt tools/requirements.in
 #
+alabaster==0.7.10         # via sphinx
 appdirs==1.4.3            # via setuptools
 astroid==1.4.9            # via pylint
+babel==2.4.0              # via sphinx
 click==6.7                # via pip-tools
+docutils==0.13.1          # via sphinx
 first==2.0.1              # via pip-tools
+imagesize==0.7.1          # via sphinx
 isort==4.2.5              # via pylint
+jinja2==2.9.6             # via sphinx
 lazy-object-proxy==1.2.2  # via astroid
+markupsafe==1.0           # via jinja2
 mccabe==0.6.1             # via pylint
 packaging==16.8           # via setuptools
 pip-tools==1.8.0
 py==1.4.33                # via pytest
+pygments==2.2.0           # via sphinx
 pylint==1.6.5
 pyparsing==2.2.0          # via packaging
 pytest==3.0.7
+pytz==2017.2              # via babel
 requests==2.13.0
-six==1.10.0               # via astroid, packaging, pip-tools, pylint, setuptools
+six==1.10.0               # via astroid, packaging, pip-tools, pylint, setuptools, sphinx
+snowballstemmer==1.2.1    # via sphinx
+sphinx-rtd-theme==0.2.4
+sphinx==1.5.5
 wrapt==1.10.10            # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
