--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -8,6 +8,7 @@ alabaster==0.7.10         # via sphinx
 appdirs==1.4.3            # via setuptools
 astroid==1.4.9            # via pylint
 babel==2.4.0              # via sphinx
+check-manifest==0.35
 click==6.7                # via pip-tools
 docutils==0.13.1          # via sphinx
 first==2.0.1              # via pip-tools
